css fixes: border overlap of layout and button, image wrapper

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -36,6 +36,7 @@
 
         .lp-json-pollock-element-button {
             border-top: $default-border;
+            margin-top: -1px;
         }
     }
 
@@ -110,6 +111,7 @@
         }
 
         img {            
+            display: block;
             width: 100%;
             height: auto;
         }
